--- a/src/css/index.css
+++ b/src/css/index.css
@@ -24,6 +24,3 @@ html {
   min-height: 100vh;
   width: 100%;
 }
-
-.player {
-}
